# skraid

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: publish-latest.yml
listing/: TOP.GG.md  top.gg.md
src/: antiraid.rs  antispam.rs  config.rs  database.rs  main.rs
src/commands/: allowlist.rs  blocklist.rs  clear.rs  configure.rs  forbidden_words.rs  global_ban.rs  mod.rs  status.rs  suggest.rs  user_allowlist.rs  user_blocklist.rs  word_blocklist.rs
src/listeners/events/: guild_ban_addition.rs  guild_create.rs  guild_member_addition.rs  message.rs  mod.rs  ready.rs
src/listeners/handlers/: event_handler.rs
src/utilities/: communication.rs  logging.rs  mod.rs
