[package]
name = "skraid"
version = "1.1.0"
edition = "2018"
license = "MIT"

[dependencies]
serenity = "0.10"
lru_time_cache = "0.11"
r8limit = "0.2"
chrono = "0.4"

[dependencies.rusqlite]
version = "0.25"
features = ["bundled"]

[dependencies.tokio]
version = "1.10"
features = ["macros", "rt-multi-thread"]